[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31.0"
